{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 13,
  "lineage": "94df78b0-5f82-2f86-2244-bdfaaaaf3da4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d069a04349dc3cb",
            "arn": "arn:aws:ec2:us-east-1:872512589783:instance/i-0b020ba74b54d0929",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b020ba74b54d0929",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-04f4ffd6ea252de41",
            "private_dns": "ip-10-20-1-104.ec2.internal",
            "private_ip": "10.20.1.104",
            "public_ip": "34.206.52.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05de743ada19c89f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0207a10dfc9ed6064"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0566d941ad71f666a",
            "tags": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0207a10dfc9ed6064"
            ]
          },
          "depends_on": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d069a04349dc3cb",
            "arn": "arn:aws:ec2:us-east-1:872512589783:instance/i-0a201fa0c7063fc76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a201fa0c7063fc76",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0df0feef67872e817",
            "private_dns": "ip-10-20-2-247.ec2.internal",
            "private_ip": "10.20.2.247",
            "public_ip": "52.91.239.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c3cd09bce1fa2aec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0207a10dfc9ed6064"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccfdd8ede8ee7573",
            "tags": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0207a10dfc9ed6064"
            ]
          },
          "depends_on": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jh_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05a0c2526b22b95ba",
            "owner_id": "872512589783",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0a2beb2ff255bafb5"
          },
          "depends_on": [
            "aws_vpc.jh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09963651998f3b651",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a0c2526b22b95ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT"
            },
            "vpc_id": "vpc-0a2beb2ff255bafb5"
          },
          "depends_on": [
            "aws_internet_gateway.jh_igw",
            "aws_vpc.jh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872512589783:security-group/sg-0207a10dfc9ed6064",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0207a10dfc9ed6064",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "872512589783",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2beb2ff255bafb5"
          },
          "depends_on": [
            "aws_vpc.jh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872512589783:subnet/subnet-0566d941ad71f666a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0566d941ad71f666a",
            "map_public_ip_on_launch": true,
            "owner_id": "872512589783",
            "tags": {
              "Name": "Subnets-1"
            },
            "vpc_id": "vpc-0a2beb2ff255bafb5"
          },
          "depends_on": [
            "aws_vpc.jh_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872512589783:subnet/subnet-0ccfdd8ede8ee7573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0ccfdd8ede8ee7573",
            "map_public_ip_on_launch": true,
            "owner_id": "872512589783",
            "tags": {
              "Name": "Subnets-2"
            },
            "vpc_id": "vpc-0a2beb2ff255bafb5"
          },
          "depends_on": [
            "aws_vpc.jh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jh_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872512589783:vpc/vpc-0a2beb2ff255bafb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0cfa1226b62294c1f",
            "default_route_table_id": "rtb-064f9f0f62c4a9527",
            "default_security_group_id": "sg-0bef2e75d835f9b0c",
            "dhcp_options_id": "dopt-b9095ac2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2beb2ff255bafb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064f9f0f62c4a9527",
            "owner_id": "872512589783",
            "tags": {
              "Name": "jhvpc"
            }
          }
        }
      ]
    }
  ]
}